--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,9 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
-    <!-- fontAwesome -->
+    <!-- fontAwesome 5: phải đăng ký mới đc vì CORS ở server -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <!-- fontAwesome 4 -->
   </head>
   <body class="mat-typography">
     <app-root></app-root>
